	PR target/48032 	* config/rs6000/rs6000.c (offsettable_ok_by_alignment): Do not 	presume symbol_refs without a symbol_ref_decl are suitably 	aligned, nor other trees we may see here.  Handle anchor symbols. 	(legitimate_constant_pool_address_p): Comment.  Add mode param. 	Check cmodel=medium addresses.  Adjust all calls. 	(rs6000_emit_move): Don't call offsettable_ok_by_alignment on 	creating cmodel=medium optimized access to locals. 	* config/rs6000/constraints.md (R): Pass QImode to 	legitimate_constant_pool_address_p. 	* config/rs6000/predicates.md (input_operand): Pass mode to 	legitimate_constant_pool_address_p. 	* config/rs6000/rs6000-protos.h (legitimate_constant_pool_address_p): 	Update prototype.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@170976 138bc75d-0d04-0410-961f-82ee72b054a4